trying to fix white space

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
+    padding: 10px;
 }
 
 .header-container img {
@@ -27,6 +28,7 @@ body {
     width: 100%;
     max-width: 1000px;
 }
+
 
 main {
     display: flex;
@@ -71,6 +73,8 @@ footer {
 @media (max-width: 767px) {
     .header-container {
         flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
 
 .header-container h1 {
@@ -83,7 +87,6 @@ figure img {
 
 aside {
     width: 100%;
-
 }
 }
 
@@ -116,9 +119,26 @@ aside {
 /* big screen*/
 
 @media (min-width: 1000px) {
+
     #container {
+       display: flex;
+       flex-direction: row;
+       justify-content: space-evenly;
+       align-items: flex-start;
+        
+    }
+
+    .header-container{
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    figure img {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     main {
@@ -126,11 +146,10 @@ aside {
         display: flex;
         flex-direction: column;
         justify-content: center;
-
     }
+
     aside {
         flex: 1;
-        max-width: 300px;
-        width: 100%;
     }
+
 }
